@@ -24,7 +24,7 @@ struct ccobject_head_struct {
 };
 
 /* These two objects are initialized when the module is loaded */
-static PyObject *TimeStamp, *py_simple_new, *sys_maxint;
+static PyObject *TimeStamp, *py_simple_new;
 
 /* Strings initialized by init_strings() below. */
 static PyObject *py_keys, *py_setstate, *py___dict__, *py_timeTime;
@@ -1118,14 +1118,6 @@ Per_set_estimated_size(cPersistentObject *self, PyObject *v)
 {
   if (v)
     {
-      if (PyLong_Check(v))
-      {
-          long long llv = PyLong_AsLongLong(v);
-          if (llv > sys_maxint)
-          {
-             v = sys_maxint;  /* borrow reference */
-          }
-      }
       if (PyInt_Check(v))
         {
           long lv = PyInt_AS_LONG(v);
@@ -1139,7 +1131,7 @@ Per_set_estimated_size(cPersistentObject *self, PyObject *v)
         }
       else
         {
-          PyErr_SetString(PyExc_ValueError,
+          PyErr_SetString(PyExc_TypeError,
                           "_p_estimated_size must be an integer");
           return -1;
         }
@@ -1430,18 +1422,6 @@ initcPersistence(void)
         return;
       TimeStamp = PyObject_GetAttrString(m, "TimeStamp");
       Py_DECREF(m);
-      if (!TimeStamp)
-        return;
-    }
-
-  if (!sys_maxint)
-    {
-      m = PyImport_ImportModule("sys");
-      if (!m)
-        return;
-      sys_maxint = PyObject_GetAttrString(m, "maxint");
-      Py_DECREF(m);
-      if (!sys_maxint)
-        return;
+      /* fall through to immediate return on error */
     }
 }
