@@ -4,8 +4,15 @@
 4.0.3 (unreleased)
 ------------------
 
-- TBD
+- Fixed: In the C implimentation, an integer was compared with a
+  pointer, with undefined results and a compiler warning.
 
+- Fixed: the Python implementation of the _p_estimated_size propety
+  didn't support deletion.
+
+- Simplified implememnntation of the _p_estimated_size property to
+  only accept integers.  A TypeError is raised if an incorrect type is
+  provided.
 
 4.0.2 (2012-08-27)
 ------------------
